--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node ./prisma/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "prisma": "^3.15.2"
   }
 }
