--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.1",
+    "semantic-ui-react": "^2.1.3"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "prisma": "^3.15.2"
